fix images and landing page

--- a/src/app/modules/application/components/sidebar/sidebar.component.html
+++ b/src/app/modules/application/components/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <div class="flex-layout">
   <div class="branding">
     <a href="/">
-      <img src="https://modernize-angular-free.netlify.app/assets/images/logos/dark-logo.svg" class="align-middle m-2"
+      <img src="/logo_transparent.png"
+                  class="align-middle m-2 fit-image"
         alt="logo" />
     </a>
   </div>
