--- a/src/app/modules/auth/modules/login/login.component.html
+++ b/src/app/modules/auth/modules/login/login.component.html
@@ -8,8 +8,8 @@
             <div class="text-center">
               <a [routerLink]="['/dashboard']">
                 <img
-                  src="https://modernize-angular-free.netlify.app/assets/images/logos/dark-logo.svg"
-                  class="align-middle m-2"
+                  src="/logo_transparent.png"
+                  class="align-middle m-2 fit-image"
                   alt="logo"
                 />
               </a>
@@ -80,7 +80,7 @@
             <span class="d-block f-w-500 text-center m-t-24"
               >New to Modernize?
               <a
-                [routerLink]="['/authentication/register']"
+                [routerLink]="['/auth/register']"
                 class="text-decoration-none text-primary f-w-500 f-s-14"
               >
                 Create an account</a
