--- a/src/app/modules/auth/modules/register/register.component.html
+++ b/src/app/modules/auth/modules/register/register.component.html
@@ -8,9 +8,8 @@
             <div class="text-center">
               <a [routerLink]="['/dashboard']">
                 <img
-                  src="https://modernize-angular-free.netlify.app/assets/images/logos/dark-logo.svg"
-                  class="align-middle m-2"
-                  alt="logo"
+                  src="/logo_transparent.png"
+                  class="align-middle m-2 fit-image"alt="logo"
                 />
               </a>
             </div>
@@ -80,7 +79,7 @@
               >Already have an Account?
   
               <a
-                [routerLink]="['/authentication/login']"
+                [routerLink]="['/auth/login']"
                 class="text-decoration-none text-primary f-w-500 f-s-14"
               >
                 Sign In</a
