--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,6 @@
 @import "styles/grid/grid";
 @import "styles/helpers/custom-flex";
 @import "styles/helpers/index";
+
+// Landing
+@import "styles/landing/style.scss";
